modifiqué index, imagenes && estilos

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Eco-Cafe</title>
+    <title>Eco-Café</title>
     <link rel="stylesheet" href="css/normalice.css" />
     <!--Estilo de letra Raleway & Lora-->
     <link rel="preconnect" href="https://fonts.googleapis.com" />
@@ -14,5 +14,37 @@
     />
     <link rel="stylesheet" href="css/estilo.css" />
   </head>
-  <body></body>
+  <body>
+    <header class="header">
+      <div class="contenedor">
+        <div class="barra">
+          <a class="logo" href="index.html">
+            <h1 class="logo_texto no-margin centrar-texto">
+              Blog<span class="logo_span">Eco-Café</span>
+            </h1>
+          </a>
+          <!---->
+          <nav class="navegacion">
+            <a href="nosotros.html" class="navegacion_enlace">Nosotros</a
+            ><a href="cursos.html" class="navegacion_enlace">Cursos</a
+            ><a href="contacto.html" class="navegacion_enlace">Contactos</a>
+          </nav>
+        </div>
+      </div>
+
+      <div class="header_texto">
+        <h2 class="no-margin">Blog de Eco-Café</h2>
+        <p class="no-margin">Recestas y consejos</p>
+      </div>
+    </header>
+
+    <div class="contenedor contenido-principal">
+      <main class="blog">
+        <h3>Nuestro Blog</h3>
+      </main>
+      <aside class="sidebar">
+        <h3>Nuestro Cursos & Talleres</h3>
+      </aside>
+    </div>
+  </body>
 </html>
