Modifiqué Css && index.html

--- a/index.html
+++ b/index.html
@@ -41,6 +41,86 @@
     <div class="contenedor contenido-principal">
       <main class="blog">
         <h3>Nuestro Blog</h3>
+        <article class="entrada">
+          <div class="entrada_imagen">
+            <img src="img/3.jpg" alt="imagen blog" />
+          </div>
+          <div class="entrada_contenido">
+            <h4 class="no-margin">Café Premium de Origen Único</h4>
+            <p>
+              Descubre la experiencia inigualable de nuestro café premium,
+              cultivado en las mejores tierras productoras y seleccionado
+              cuidadosamente para ofrecerte el sabor más fresco y auténtico. Con
+              un perfil de sabor suave, con toques de notas frutales y un final
+              dulce, cada taza de nuestro café es una invitación a disfrutar de
+              un momento único. Ideal para comenzar el día con energía o para
+              una pausa perfecta en cualquier momento. Disponible en granos o
+              molido, para que disfrutes de la máxima frescura en cada
+              preparación. ¡Haz de tu día una experiencia deliciosa con nuestro
+              café de alta calidad!
+            </p>
+            <a href="entrada.html" class="boton boton-primario"
+              >Leer Entradas</a
+            >
+          </div>
+        </article>
+        <!--Fin de Articulo-->
+        <article class="entrada">
+          <div class="entrada_imagen">
+            <img src="img/4.png" alt="imagen blog" />
+          </div>
+          <div class="entrada_contenido">
+            <h4 class="no-margin">
+              Café de Alta Calidad – Siente el Placer de Cada Taza
+            </h4>
+            <p>
+              Sumérgete en el delicioso mundo del café de calidad superior,
+              cuidadosamente seleccionado y tostado para brindarte una
+              experiencia inigualable en cada sorbo. Nuestro café proviene de
+              las mejores fincas de cultivo, donde los granos son cultivados con
+              pasión y dedicación, en armonía con la naturaleza. Cada taza te
+              transporta a las tierras donde el café se produce de manera
+              responsable y sostenible, apoyando a las comunidades locales que
+              cuidan de cada grano. <br />¿Por qué elegir nuestro café?<br />
+              Origen único:<br />
+              Granos seleccionados de las mejores regiones productoras de café.
+              Sostenibilidad y comercio justo: Apoyamos a los agricultores
+              locales con prácticas éticas que favorecen el desarrollo de sus
+              comunidades.<br />
+              Frescura en cada taza: Nuestros productos se tuestan en pequeños
+              lotes para garantizar la máxima frescura y calidad. Variedad para
+              cada gusto: Desde un café suave y afrutado hasta uno más robusto y
+              con cuerpo, tenemos la opción perfecta para ti.
+            </p>
+            <a href="entrada.html" class="boton boton-primario"
+              >Leer Entradas</a
+            >
+          </div>
+        </article>
+        <!--Fin de Articulo-->
+        <article class="entrada">
+          <div class="entrada_imagen">
+            <img src="img/7.png" alt="imagen blog" />
+          </div>
+          <div class="entrada_contenido">
+            <h4 class="no-margin">
+              Café 100% Natural – La Pureza en Cada Sorbo
+            </h4>
+            <p>
+              Disfruta de la pureza de un café sin igual, 100% natural, sin
+              aditivos ni conservantes. Cada grano es cuidadosamente
+              seleccionado para brindarte un sabor genuino y auténtico que
+              respeta el verdadero espíritu del café. Sus notas de caramelo y
+              cacao, combinadas con un toque afrutado, lo convierten en una
+              opción perfecta para aquellos que buscan una experiencia pura. Ya
+              sea en granos enteros o molido, nuestro café es perfecto para los
+              que aprecian la calidad en cada taza.
+            </p>
+            <a href="entrada.html" class="boton boton-primario"
+              >Leer Entradas</a
+            >
+          </div>
+        </article>
       </main>
       <aside class="sidebar">
         <h3>Nuestro Cursos & Talleres</h3>
