Agregó nosotros.html && más diseños en el css

--- a/index.html
+++ b/index.html
@@ -124,7 +124,56 @@
       </main>
       <aside class="sidebar">
         <h3>Nuestro Cursos & Talleres</h3>
+        <ul class="cursos no-padding">
+          <li class="widget_curso">
+            <h4 class="no-margin">Técnicas de Extracción de Café</h4>
+            <p class="widget_curso_laber">
+              Precio:
+              <span class="widget_curso_info">Gratis</span>
+            </p>
+            <p class="widget_curso_laber">
+              Cupo:
+              <span class="widget_curso_info">20</span>
+            </p>
+            <a href="entrada.html" class="boton boton-secundario"
+              >Más Información</a
+            >
+          </li>
+          <!--Fin de Li-->
+          <li class="widget_curso">
+            <h4 class="no-margin">4 Recetas para principiantes</h4>
+            <p class="widget_curso_laber">
+              Precio:
+              <span class="widget_curso_info">Gratis</span>
+            </p>
+            <p class="widget_curso_laber">
+              Cupo:
+              <span class="widget_curso_info">20</span>
+            </p>
+            <a href="entrada.html" class="boton boton-secundario"
+              >Más Información</a
+            >
+          </li>
+        </ul>
       </aside>
     </div>
+    <!--Fin de Contenedor Principal-->
+    <footer class="footer">
+      <div class="contenedor">
+        <div class="barra">
+          <a class="logo" href="index.html">
+            <h1 class="logo_texto no-margin centrar-texto">
+              Blog<span class="logo_span">Eco-Café</span>
+            </h1>
+          </a>
+          <!---->
+          <nav class="navegacion">
+            <a href="nosotros.html" class="navegacion_enlace">Nosotros</a
+            ><a href="cursos.html" class="navegacion_enlace">Cursos</a
+            ><a href="contacto.html" class="navegacion_enlace">Contactos</a>
+          </nav>
+        </div>
+      </div>
+    </footer>
   </body>
 </html>
