--- a/contacto.html
+++ b/contacto.html
@@ -42,41 +42,40 @@
       <h3 class="centrar-texto">Contactos</h3>
       <div class="contacto-bg"></div>
       <form class="formulario">
-        <fieldset>
-          <legend>Información Personal</legend>
-          <div class="campo">
-            <label for="nombre">Nombre:</label>
-            <input
-              class="campo_field"
-              type="text"
-              id="nombre"
-              placeholder="Tu Nombre"
-            />
-          </div>
-          <div class="campo">
-            <label class="campo_label" for="email">Email:</label>
-            <input
-              class="campo_field"
-              type="email"
-              id="email"
-              placeholder="Tu Email"
-            />
-          </div>
-          <div class="campo">
-            <label class="campo_label" for="telefono">Teléfono:</label>
-            <input
-              class="campo_field"
-              type="tel"
-              id="telefono"
-              placeholder="Tu Teléfono"
-            />
-          </div>
-          <div class="campo">
-            <label class="campo_label" for="mensaje">Mensaje:</label>
-            <textarea id="mensaje"></textarea>
-          </div>
-        </fieldset>
-        <input type="submit" value="Enviar" class="boton boton-primario" />
+        <div class="campo">
+          <label for="nombre">Nombre:</label>
+          <input
+            class="campo_field"
+            type="text"
+            id="nombre"
+            placeholder="Tu Nombre"
+          />
+        </div>
+        <div class="campo">
+          <label class="campo_label" for="email">Email:</label>
+          <input
+            class="campo_field"
+            type="email"
+            id="email"
+            placeholder="Tu Email"
+          />
+        </div>
+        <div class="campo">
+          <label class="campo_label" for="Mensaje">Mensaje:</label>
+          <input
+            class="campo_field campo_field-textarea"
+            type="Men"
+            id="Mensaje"
+            placeholder="Mensaje"
+          />
+        </div>
+
+        <input
+          class="campo_field"
+          type="submit"
+          value="Enviar"
+          class="boton boton-primario"
+        />
       </form>
     </main>
     <!--Fin de Contenedor Principal-->
